force-app/main/default/objects/KPI_Target__c/KPI_Target__c.object-meta.xml
<CustomObject>
    <label>KPI Target</label>
    <nameField>
        <displayFormat>KTN-{0000}</displayFormat>
        <label>KPI Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>