force-app/main/default/objects/KPI_Target__c/fields/KPI_Target_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target_Name__c</fullName>
    <formula>Roles_and_KPI__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Target Name</label>
    <type>Text</type>
</CustomField>