force-app/main/default/objects/KPI_Target__c/fields/Monthly_Beat_Plan__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Beat_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Beat Plan</label>
    <referenceTo>Monthly_Beat_Plan__c</referenceTo>
    <relationshipLabel>KPI Targets</relationshipLabel>
    <relationshipName>KPI_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>