force-app/main/default/objects/KPI_Target__c/fields/Roles_and_KPI__c.field-meta.xml
<CustomField>
    <fullName>Roles_and_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roles and KPI</label>
    <referenceTo>Roles_and_KPI__c</referenceTo>
    <relationshipLabel>KPI Targets</relationshipLabel>
    <relationshipName>KPI_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>