force-app/main/default/objects/KPI_Target__c/fields/Target_Count__c.field-meta.xml
<CustomField>
    <fullName>Target_Count__c</fullName>
    <label>Target Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>