force-app/main/default/objects/KPI_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Roles_and_KPI__c</columns>
    <columns>Monthly_Beat_Plan__c</columns>
    <columns>KPI_Target_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>